# flet-components

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
flet_components/: __init__.py  core.py
flet_components/toasts_flexible/: README.md  __init__.py
flet_components/toasts_flexible/examples/: toast_description_customized_without_live_time.py  toast_description_customized_without_title.py  toast_description_only_and_auto_close.py  toast_interval_random.py  toast_title_only_and_interval_second_update.py  toast_with_trigger_and_auto_close.py  toast_without_trigger.py
flet_components/toasts_flexible/src/: toasts_flexible.py
