[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"


[project]
# DESC | The name of the package. Required
name = "portdev-flet-components"

# DESC | The version of the package. Required
version = "0.1.1"

# DESC | A short description of the package. Required
description = "a components develop for the flet python framework and to easily customizable."

# DESC | A list of keywords that the package is related to. Optional
keywords = ["flet app", "flet components", "gui", "ui", "user interfaces", "python"]

# DESC | The authors of the package. Required
authors = [{ name="Mr Yassin NM", email="mr.yassin.dev@outlook.com" },]

# DESC | The license of the package. Optional
license = {file="LICENSE"}

# DESC | A path, or list of paths corresponding to the README file(s) of the package. Optional
readme = "README.md"

# DESC | A The Python version requirements of the project.
requires-python = ">=3.7"

# DESC | A list of PyPI trove classifiers that describe the project https://pypi.org/classifiers/. Optional
classifiers = [
  "Topic :: Utilities",
  "Topic :: Software Development :: User Interfaces",
  "Intended Audience :: Developers",
  "Development Status :: 5 - Production/Stable",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Operating System :: OS Independent",
  "Environment :: Other Environment",
  "Natural Language :: English",
]

# DESC | A dependencies requires needed.
dependencies = [
  'flet >= 0.7.4',
  'portdev-utils-standard @ git+https://github.com/MrYassinox/utils-standard.git@v1.1.2',
]


[project.urls]
# DESC | An URL to the website of the project. Optional
homepage = "http://portdev.com"

# DESC | An URL to the repository of the project. Optional
repository = "https://github.com/MrYassinox/"

# DESC | An URL to the documentation of the project. Optional
documentation = "https://github.com/MrYassinox/"

# DESC | Bug url
"Bug Tracker" = "https://github.com/MrYassinox/"


[tool.setuptools]
include-package-data = true # DESC | By default, include-package-data is true in pyproject.toml, so you do


[tool.setuptools.packages.find]
where = ["."] # DESC | list of folders that contain the packages (["."] by default)
include = ["flet_components*"] # DESC | package names should match these glob patterns (["*"] by default)
exclude = [] # DESC | exclude packages matching these glob patterns (empty by default) ["my_package.tests*"]


[tool.setuptools.package-data]
# "*" = ["*.txt", "*.md"] # DESC | include data the .txt etc as data files and ("*" the root packages folders or name)
# pkg = ["*.txt", "*.md"]